--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -16,7 +18,11 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    buildscript {
+        repositories {
+            mavenCentral()
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -35,7 +41,9 @@ android {
         dataBinding = true
         viewBinding = true
     }
+
 }
+
 
 dependencies {
 
@@ -59,4 +67,8 @@ dependencies {
 
     implementation 'androidx.activity:activity-ktx:1.6.1'
     //implementation 'androidx.fragment:fragment-ktx:1.6.1'
+
+    //BubbleTabBar
+    //implementation 'com.fxn769:bubbletabbar:1.0.6'
+    implementation 'io.ak1:bubbletabbar:1.0.8'
 }
