--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
             <!--            </intent-filter>-->
         </activity>
         <activity
-            android:name=".activities.login.MainActivity"
+            android:name=".activities.login.LoginActivity"
             android:exported="true">
 
             <!-- <intent-filter> -->
