--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".activities.main.MainScreenActivity"
+            android:name=".main.MainScreenActivity"
             android:exported="false" />
         <activity
             android:name=".activities.SplashActivity"
@@ -31,7 +31,7 @@
             android:name=".activities.BaseActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.registration.RegisterActivity"
+            android:name=".registration.RegisterActivity"
             android:exported="true">
 
             <!-- <intent-filter> -->
@@ -42,7 +42,7 @@
             <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name=".activities.login.LoginActivity"
+            android:name=".login.LoginActivity"
             android:exported="true">
 
             <!-- <intent-filter> -->
