--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.generosity.choobudo"
         minSdk 26
         targetSdk 33
-        versionCode 4
-        versionName "4.0"
+        versionCode 5
+        versionName "5.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.debug
@@ -56,11 +56,12 @@ android {
 
 
 dependencies {
-
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.android.car.ui:car-ui-lib:2.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -81,4 +82,5 @@ dependencies {
     //BubbleTabBar
     //implementation 'com.fxn769:bubbletabbar:1.0.6'
     implementation 'io.ak1:bubbletabbar:1.0.8'
+    //implementation 'com.android.support:recyclerview-v7:27.0.0'
 }
