--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,7 @@ dependencies {
     //implementation 'com.fxn769:bubbletabbar:1.0.6'
     implementation 'io.ak1:bubbletabbar:1.0.8'
     //implementation 'com.android.support:recyclerview-v7:27.0.0'
+
+//    implementation 'com.android.support:cardview-v7:25.1.1'
+//    implementation 'com.android.support:recyclerview-v7:25.1.1'
 }
