--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,6 @@ dependencies {
 
 //    implementation 'com.android.support:cardview-v7:25.1.1'
 //    implementation 'com.android.support:recyclerview-v7:25.1.1'
+    //implementation 'com.robertlevonyan.view:CustomFloatingActionButton:2.1.0'
+
 }
