--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,10 @@ android {
 
     defaultConfig {
         applicationId "com.generosity.choobudo"
-        minSdk 26
+        minSdk 28
         targetSdk 33
-        versionCode 11
-        versionName "11.0"
+        versionCode 14
+        versionName "14.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.debug
@@ -47,7 +47,7 @@ android {
     }
 
     buildFeatures {
-        dataBinding = true
+        //dataBinding = true
         viewBinding = true
     }
     buildToolsVersion '33.0.1'
@@ -57,12 +57,12 @@ android {
 
 dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.1'
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.6.0'
-    implementation 'com.google.android.material:material:1.7.0'
+    //hag implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.android.car.ui:car-ui-lib:2.0.0'
-    implementation 'androidx.annotation:annotation:1.3.0'
+    implementation 'com.android.car.ui:car-ui-lib:2.5.0'
+    //hag implementation 'androidx.annotation:annotation:1.3.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -71,11 +71,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.6.0'
 
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    //implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    //implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
     implementation 'androidx.activity:activity-ktx:1.6.1'
     //implementation 'androidx.fragment:fragment-ktx:1.6.1'
